--- a/resources/sass/_design.scss
+++ b/resources/sass/_design.scss
@@ -29,7 +29,19 @@
   width: 20vw;
  }
 }
-#logo {}
+#logo {
+ margin-top: -1rem;
+ margin-right: -1rem;
+ margin-bottom: -1rem;
+ margin-left: -1rem;
+ @include media-breakpoint-up(lg) {
+  margin-left: auto;
+  margin-right: auto;
+ }
+ img {
+  max-height: 70px;
+ }
+}
 #mainNavToggle {
  @include media-breakpoint-up(lg) {
   display: none;
@@ -50,6 +62,10 @@
  background-color: #1B2033;
  .nav-link {
   color: $light;
+  &.active {
+   background-color: rgba($white, .1);
+   border-left: 4px solid $yellow;
+  }
  }
  @include media-breakpoint-down(md) {
   align-items: center;
@@ -75,6 +91,10 @@
   > .btn {
    width: calc(100% - 2rem);
    align-self: center;
+   transition: all .35s ease-in-out;
+   &:hover, &:focus {
+    transform: translateX(2em);
+   }
    + .btn {
     margin-top: .5rem;
    }
@@ -83,6 +103,10 @@
  .nav {
   flex: 1 1 auto;
   flex-direction: column;
+  @include media-breakpoint-down(md) {
+   margin-top: 6rem;
+   width: 70vw;
+  }
  }
 }
 #contents {
@@ -97,7 +121,16 @@
  flex-direction: row;
  justify-content: space-between;
  .input-group-text {
+  border-right: 0;
   background-color: transparent;
+ }
+ .form-control {
+  border-left-color: transparent;
+  box-shadow: none;
+  &:focus {
+   border: 1px solid rgba($black, .1);
+   background-color: rgba($primary, .08);
+  }
  }
  @include media-breakpoint-up(md) {
   .input-group {
@@ -117,6 +150,23 @@
   height: 60px;
   > div, ul {
    align-self: center;
+  }
+ }
+ .nav-link {
+  color: $dark;
+  position: relative;
+  .badge {
+   padding: 5px;
+   border-radius: 50%;
+   position: absolute;
+   top: 5px;
+   right: 8px;
+   line-height: 5px;
+   display: inline-flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   font-size: 10px;
   }
  }
 }
