--- a/resources/sass/config/_colors.scss
+++ b/resources/sass/config/_colors.scss
@@ -5,7 +5,7 @@ $gray-200: #e9ecef;
 $gray-300: #dee2e6;
 $gray-400: #ced4da;
 $gray-500: #adb5bd;
-$gray-600: #6c757d;
+$gray-600: #7C7C7C; // altered
 $gray-700: #495057;
 $gray-800: #343a40;
 $gray-900: #212529;
