updates throughout app

--- a/resources/sass/concept.scss
+++ b/resources/sass/concept.scss
@@ -3,4 +3,11 @@
 
 @import 'bootstrap';
 
+@import 'config/colorExtension';
+
+
 @import 'design';
+.btn {
+ text-transform: uppercase;
+ letter-spacing: 1.2px;
+}
