--- a/resources/sass/_bootstrap.scss
+++ b/resources/sass/_bootstrap.scss
@@ -2,7 +2,7 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
-//@import "~bootstrap/scss/utilities";
+@import "~bootstrap/scss/utilities";
 
 // Optional but shared throughout projects
 @import "~bootstrap/scss/root";
