--- a/resources/sass/_design.scss
+++ b/resources/sass/_design.scss
@@ -59,7 +59,8 @@
  }
 }
 #mainNav {
- background-color: #1B2033;
+ background-color: $dark;
+ background: linear-gradient(173deg, mix($white, $dark, 15%), $dark) repeat-x;
  .nav-link {
   color: $light;
   &.active {
@@ -85,7 +86,7 @@
  @include media-breakpoint-up(lg) {
   flex: 0 0 20%;
   max-width: 280px;
-  padding-top: calc(1rem + 60px);
+  padding-top: calc(1rem + 43px);
   display: flex;
   flex-direction: column;
   > .btn {
@@ -104,7 +105,7 @@
   flex: 1 1 auto;
   flex-direction: column;
   @include media-breakpoint-down(md) {
-   margin-top: 6rem;
+   // margin-top: 6rem;
    width: 70vw;
   }
  }
@@ -121,7 +122,8 @@
  flex-direction: row;
  justify-content: space-between;
  .input-group-text {
-  border-right: 0;
+  @include media-breakpoint-down(sm) {border: 0}
+  @include media-breakpoint-up(md) {border-right: 0}
   background-color: transparent;
  }
  .form-control {
@@ -207,12 +209,13 @@
    }
    > * {
     margin: 0;
-    border: 1px solid red;
     display: block;
     width: 75vw;
    }
    > .form-control {
     flex: unset;
+    border-left: 1px solid $input-border-color;
+    margin-bottom: 1rem;
    }
   }
  }
