--- a/resources/sass/config/_colors.scss
+++ b/resources/sass/config/_colors.scss
@@ -1,32 +1,53 @@
 // Color system
 $white: #fff;
-$gray-100: #f8f9fa;
-$gray-200: #e9ecef;
-$gray-300: #dee2e6;
-$gray-400: #ced4da;
-$gray-500: #adb5bd;
-$gray-600: #7C7C7C; // altered
-$gray-700: #495057;
-$gray-800: #343a40;
-$gray-900: #212529;
+// $gray-100: #f8f9fa;
+// $gray-200: #e9ecef;
+// $gray-300: #dee2e6;
+// $gray-400: #ced4da;
+// $gray-500: #adb5bd;
+// $gray-600: #7C7C7C;
+// $gray-700: #495057;
+// $gray-800: #343a40;
+$gray-900: #262626;
 $black: #000;
 
-$blue: #162899; // altered
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #e83e8c;
-$red: #f04165; // altered
-$orange: #fd7e14;
-$yellow: #f1c23e; // altered
-$green: #4ad05b; // altered
-$teal: #20c997;
-$cyan:#3d58ff; // altered
+$blue: #1e26e1;
+$indigo: #042163;
+$purple: #781ee1;
+$pink: #e11e88;
+$red: #e11e26;
+$orange: #f4770d;
+$yellow: #f4ea0d;
+$green: #45a116;
+$teal:	#15b8a4;
+$cyan: #1e88e1;
+$brown: #cc9f53; // custom added [DNR - brand primary color]
 
-$primary: $blue;
-$secondary: $gray-600;
+
+$colors: () !default;
+$colors: map-merge(
+ (
+ // "maroon":   $maroon,
+ // "apricot":  $apricot,
+ // "olive":    $olive,
+ // "beige":    $beige,
+ // "lime":     $lime,
+ // "mint":     $mint,
+ // "lavender": $lavender,
+ // "magenta":  $magenta,
+ // "gold":     $gold,
+ // "silver":   $silver,
+ "brown":    $brown
+ ),
+ $colors
+);
+
+$primary: $brown;
+// $secondary: $gray-600;
 $success: $green;
-$info: $cyan;
-$warning: $yellow;
-$danger: $red;
-$light: $gray-300;
-$dark: $gray-800;
+$info: $blue;
+$warning: $orange;
+$danger: $purple;
+// $light: $gray-300;
+$dark: $gray-900;
+
