--- a/resources/sass/config/_colors.scss
+++ b/resources/sass/config/_colors.scss
@@ -46,8 +46,8 @@ $primary: $brown;
 // $secondary: $gray-600;
 $success: $green;
 $info: $blue;
-$warning: $orange;
-$danger: $purple;
+$warning: mix($white, $orange, 25%);
+$danger: $red;
 // $light: $gray-300;
 $dark: $gray-900;
 
